--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,7 +132,7 @@
 		}
 
 	strong, b {
-		color: #646464;
+		color: #6E20A0;
 		font-weight: 400;
 	}
 
@@ -145,7 +145,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #646464;
+		color: #6E20A0;
 		font-weight: 300;
 		line-height: 1em;
 		margin: 0 0 0.5em 0;
@@ -2069,7 +2069,7 @@
 	}
 
 	label {
-		color: #646464;
+		color: #6E20A0;
 		display: block;
 		font-size: 0.9em;
 		font-weight: 300;
@@ -2691,7 +2691,7 @@
 		}
 
 		table th {
-			color: #646464;
+			color: #6E20A0;
 			font-size: 0.9em;
 			font-weight: 300;
 			padding: 0 0.75em 0.75em 0.75em;
