--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2018,7 +2018,7 @@
 	}
 
 	header p {
-		color: #999;
+		color: #6E20A0;
 		position: relative;
 		margin: 0 0 1.5em 0;
 		font-style: italic;
@@ -2055,8 +2055,8 @@
 
 		header.major p {
 			display: inline-block;
-			border-top: solid 2px #e5e5e5;
-			color: #777;
+			border-top: solid 2px #6E20A0;
+			color: #6E20A0;
 			margin: 1.5em 0 0 0;
 			padding: 1.5em 0 0 0;
 			font-style: normal;
@@ -2087,7 +2087,7 @@
 		appearance: none;
 		background-color: #f8f8f8;
 		border-radius: 6px;
-		border: solid 1px #e5e5e5;
+		border: solid 1px #6E20A0;
 		color: inherit;
 		display: block;
 		outline: 0;
@@ -2124,7 +2124,7 @@
 	}
 
 		select option {
-			color: #777;
+			color: #6E20A0;
 			background-color: #f5f5f5;
 		}
 
@@ -2164,7 +2164,7 @@
 		input[type="checkbox"] + label,
 		input[type="radio"] + label {
 			text-decoration: none;
-			color: #777;
+			color: #6E20A0;
 			cursor: pointer;
 			display: inline-block;
 			font-size: 1em;
@@ -2192,7 +2192,7 @@
 			input[type="radio"] + label:before {
 				background: #f8f8f8;
 				border-radius: 6px;
-				border: solid 1px #e5e5e5;
+				border: solid 1px #6E20A0;
 				content: '';
 				display: inline-block;
 				font-size: 0.8em;
