--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3162,8 +3162,8 @@
 
 	#banner {
 		background-attachment: scroll,							fixed;
-		background-color: #666;
-		background-image: url("images/overlay.png"), url("../../images/banner.gif");
+		background-color: #6E20A0;
+		#background-image: url("images/overlay.png"), url("../../images/banner.gif");
 		background-position: top left,						center center;
 		background-repeat: repeat,							no-repeat;
 		background-size: auto,							cover;
@@ -3177,7 +3177,7 @@
 		}
 
 		#banner h2, #banner h3, #banner h4, #banner h5, #banner h6 {
-			color: #fff;
+			color: #6E20A0;
 		}
 
 		#banner h2 {
