--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2931,8 +2931,8 @@
 	}
 
 	#header {
-		background: #444;
-		color: #bbb;
+		background: #7413dc;
+		color: #7413dc;
 		cursor: default;
 		height: 3.25em;
 		left: 0;
@@ -2955,7 +2955,7 @@
 		}
 
 			#header h1 a {
-				color: #fff;
+				color: #7413dc;
 				font-weight: 400;
 				border: 0;
 			}
@@ -2993,14 +2993,14 @@
 					}
 
 					#header nav > ul > li a:not(.button) {
-						color: #fff;
+						color: #ffe627;
 						display: inline-block;
 						text-decoration: none;
 						border: 0;
 					}
 
 						#header nav > ul > li a:not(.button).icon:before {
-							color: #999;
+							color: #ffe627;
 							margin-right: 0.5em;
 						}
 
@@ -3023,7 +3023,7 @@
 		#header .button {
 			background-color: transparent;
 			box-shadow: inset 0 0 0 2px #999;
-			color: #fff;
+			color: #ffe627;
 		}
 
 			#header input[type="submit"]:hover,
