--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 @import url("fontawesome-all.min.css");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
+@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:black,extra-bold,bold,regular,light");
 
 /*
 	Alpha by HTML5 UP
