--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,7 +110,7 @@
 
 	body, input, select, textarea {
 		color: #777;
-		font-family: "Source Sans Pro", sans-serif;
+		font-family: "Nunito Sans", sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
 		line-height: 1.65em;
@@ -146,7 +146,7 @@
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #6E20A0;
-		font-weight: 300;
+		font-weight: 800;
 		line-height: 1em;
 		margin: 0 0 0.5em 0;
 	}
@@ -220,7 +220,7 @@
 		background: #f8f8f8;
 		border-radius: 6px;
 		border: solid 1px #e5e5e5;
-		font-family: monospace;
+		font-family: Nanito Sans;
 		font-size: 0.9em;
 		line-height: 1.75em;
 		margin: 0 0 2em 0;
@@ -2184,7 +2184,7 @@
 				text-rendering: auto;
 				line-height: 1;
 				text-transform: none !important;
-				font-family: 'Font Awesome 5 Free';
+				font-family: 'Nunito Sans';
 				font-weight: 900;
 			}
 
@@ -2380,7 +2380,7 @@
 			text-rendering: auto;
 			line-height: 1;
 			text-transform: none !important;
-			font-family: 'Font Awesome 5 Free';
+			font-family: 'Nunito Sans';
 			font-weight: 400;
 		}
 
@@ -2956,7 +2956,7 @@
 
 			#header h1 a {
 				color: #ffffff;
-				font-weight: 400;
+				font-weight: 700;
 				border: 0;
 			}
 
@@ -3543,7 +3543,7 @@
 						text-rendering: auto;
 						line-height: 1;
 						text-transform: none !important;
-						font-family: 'Font Awesome 5 Free';
+						font-family: 'Nunito Sans';
 						font-weight: 900;
 					}
 
@@ -3900,7 +3900,7 @@
 =======================*/
 
 
-.page_404{ padding:40px 0; background:#fff; font-family: 'Arvo', serif;
+.page_404{ padding:40px 0; background:#fff; font-family: 'Nunito Sans', serif;
 }
 
 .page_404  img{ width:100%;}
