--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2380,7 +2380,7 @@
 			text-rendering: auto;
 			line-height: 1;
 			text-transform: none !important;
-			font-family: 'Nunito Sans';
+			font-family: 'Font Awesome 5 Free';
 			font-weight: 400;
 		}
 
