--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3254,7 +3254,7 @@
 /* Footer */
 
 	#footer {
-		background: #f0f0f0;
+		background: #ffb4e5;
 		padding: 4em 0 6em 0;
 		text-align: center;
 	}
