--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2401,7 +2401,7 @@
 		}
 
 		.icon.major {
-			background: #666;
+			background: #ffffff;
 			border-radius: 100%;
 			color: #ffffff;
 			cursor: default;
