--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2417,27 +2417,27 @@
 			}
 
 			.icon.major.accent1 {
-				background: #666;
+				background: #ffffff;
 				color: #ffffff;
 			}
 
 			.icon.major.accent2 {
-				background: #e89980;
+				background: #ffffff;
 				color: #ffffff;
 			}
 
 			.icon.major.accent3 {
-				background: #7fcdb8;
+				background: #ffffff;
 				color: #ffffff;
 			}
 
 			.icon.major.accent4 {
-				background: #90b0ba;
+				background: #ffffff;
 				color: #ffffff;
 			}
 
 			.icon.major.accent5 {
-				background: #e5cb95;
+				background: #ffffff;
 				color: #ffffff;
 			}
 
