--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3266,7 +3266,7 @@
 /* Footer */
 
 	#footer {
-		background: #088486;
+		background: #7413dc;
 		padding: 4em 0 6em 0;
 		text-align: center;
 	}
