--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3313,7 +3313,7 @@
 /* CTA */
 
 	#cta {
-		background: #e89980;
+		background: #7413dc;
 		color: #f9e6df;
 		padding: 3.5em 0 4em 0;
 		text-align: center;
