--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2473,7 +2473,7 @@
 			padding: 0 0 1em 1.5em;
 			top: 0.25em;
 		}
-		.image.align-center {
+		.image.center {
 			float: center;
 			width: 25%;
 		}
