--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2478,7 +2478,7 @@
 		.image.center {
 			float: center;
 			display: block;
-			width: 5%;
+			width: 100px;
 			height: auto;
 			position: relative;
 		}
