--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,7 +109,7 @@
 	}
 
 	body, input, select, textarea {
-		color: #777;
+		color: #ffffff;
 		font-family: "Nunito Sans", sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
@@ -123,7 +123,7 @@
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #e89980;
+		color: #ffffff;
 		text-decoration: none;
 	}
 
@@ -2057,8 +2057,8 @@
 			display: inline-block;
 			border-top: solid 2px #6E20A0;
 			color: #6E20A0;
-			margin: 1.5em 0 0 0;
-			padding: 1.5em 0 0 0;
+			margin: 1.0em 0 0 0;
+			padding: 1.0em 0 0 0;
 			font-style: normal;
 		}
 
@@ -2207,16 +2207,16 @@
 
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
-			background: #666;
-			border-color: #666;
+			background: #ffffff;
+			border-color: #ffffff;
 			color: #ffffff;
 			content: '\f00c';
 		}
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #e89980;
-			box-shadow: 0 0 0 1px #e89980;
+			border-color: #ffffff;
+			box-shadow: 0 0 0 1px #ffffff;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2762,7 +2762,7 @@
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: #666;
+		background-color: #ffffff;
 		border-radius: 6px;
 		border: 0;
 		color: #ffffff;
@@ -2864,7 +2864,7 @@
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #e89980;
+			background-color: #ffffff;
 			color: #ffffff !important;
 		}
 
@@ -2872,7 +2872,7 @@
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				background-color: #ecaa96;
+				background-color: #ffffff;
 			}
 
 			input[type="submit"].primary:active,
@@ -2964,7 +2964,7 @@
 		cursor: default;
 		height: 4.25em;
 		left: 0;
-		line-height: 3.25em;
+		line-height: 4.25em;
 		position: fixed;
 		top: 0;
 		width: 100%;
@@ -3037,7 +3037,7 @@
 					}
 
 					#header nav > ul > li.active a:not(.button) {
-						background-color: rgba(153, 153, 153, 0.25);
+						background-color: #ffffff;
 					}
 
 					#header nav > ul > li .button {
@@ -3268,7 +3268,7 @@
 
 			#main > header p {
 				border-top: solid 2px #e5e5e5;
-				color: #777;
+				color: #ffffff;
 				display: inline-block;
 				font-style: normal;
 				margin: 1em 0 0 0;
