--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,7 +109,7 @@
 	}
 
 	body, input, select, textarea {
-		color: #ffffff;
+		color: #000000;
 		font-family: "Nunito Sans", sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
@@ -3268,7 +3268,7 @@
 
 			#main > header p {
 				border-top: solid 2px #e5e5e5;
-				color: #ffffff;
+				color: #000000;
 				display: inline-block;
 				font-style: normal;
 				margin: 1em 0 0 0;
