--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -123,7 +123,7 @@
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #ffffff;
+		color: #000000;
 		text-decoration: none;
 	}
 
@@ -2208,7 +2208,7 @@
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
 			background: #ffffff;
-			border-color: #ffffff;
+			border-color: #000000;
 			color: #ffffff;
 			content: '\f00c';
 		}
@@ -2762,7 +2762,7 @@
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: #ffffff;
+		background-color: #000000;
 		border-radius: 6px;
 		border: 0;
 		color: #ffffff;
@@ -2983,7 +2983,7 @@
 		}
 
 			#header h1 a {
-				color: #ffffff;
+				color: #000000;
 				font-weight: 700;
 				border: 0;
 			}
@@ -3359,7 +3359,7 @@
 		#cta input[type="email"],
 		#cta select,
 		#cta textarea {
-			color: #ffffff;
+			color: #000000;
 			background: rgba(255, 255, 255, 0.15);
 			border: 0;
 		}
