--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2462,7 +2462,7 @@
 		}
 			.image.left fit {
 				float: left;
-				padding: 0 1.5em 1em 0;
+				padding: 2 1.5em 1em 0;
 				top: 0.25em;
 				display: block;
 				width: 25%;
@@ -2835,7 +2835,7 @@
 		input[type="button"].alt,
 		.button.alt {
 			background-color: transparent;
-			box-shadow: inset 0 0 0 2px #e5e5e5;
+			box-shadow: inset 0 0 0 2px #999;
 			color: #777;
 		}
 
@@ -2843,14 +2843,14 @@
 			input[type="reset"].alt:hover,
 			input[type="button"].alt:hover,
 			.button.alt:hover {
-				background-color: #f8f8f8;
+				background-color: #999;
 			}
 
 			input[type="submit"].alt:active,
 			input[type="reset"].alt:active,
 			input[type="button"].alt:active,
 			.button.alt:active {
-				background-color: #f0f0f0;
+				background-color: #999;
 			}
 
 			input[type="submit"].alt.icon:before,
@@ -2865,7 +2865,7 @@
 		input[type="button"].primary,
 		.button.primary {
 			background-color: #000000;
-			color: #ffffff !important;
+			color: #999 !important;
 		}
 
 			input[type="submit"].primary:hover,
@@ -2879,7 +2879,7 @@
 			input[type="reset"].primary:active,
 			input[type="button"].primary:active,
 			.button.primary:active {
-				background-color: #e4886a;
+				background-color: #999;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2891,7 +2891,7 @@
 		.button:disabled {
 			background-color: #777 !important;
 			box-shadow: inset 0 -0.15em 0 0 rgba(0, 0, 0, 0.15);
-			color: #f5f5f5 !important;
+			color: #777 !important;
 			cursor: default;
 			opacity: 0.25;
 		}
