--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2765,7 +2765,7 @@
 		background-color: #999;
 		border-radius: 6px;
 		border: 0;
-		color: #000000;
+		color:  #999;
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 400;
@@ -2872,7 +2872,7 @@
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				background-color: #000000;
+				background-color: #999;
 			}
 
 			input[type="submit"].primary:active,
@@ -3051,7 +3051,7 @@
 		#header .button {
 			background-color: transparent;
 			box-shadow: inset 0 0 0 2px #ffffff;
-			color: #000000;
+			color: #999;
 		}
 
 			#header input[type="submit"]:hover,
@@ -3268,7 +3268,7 @@
 
 			#main > header p {
 				border-top: solid 2px #e5e5e5;
-				color: #000000;
+				color: #ffffff;
 				display: inline-block;
 				font-style: normal;
 				margin: 1em 0 0 0;
@@ -3359,7 +3359,7 @@
 		#cta input[type="email"],
 		#cta select,
 		#cta textarea {
-			color: #000000;
+			color: #999;
 			background: rgba(255, 255, 255, 0.15);
 			border: 0;
 		}
