--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2836,7 +2836,7 @@
 		.button.alt {
 			background-color: transparent;
 			box-shadow: inset 0 0 0 2px #999;
-			color: #777;
+			color: #ffffff;
 		}
 
 			input[type="submit"].alt:hover,
@@ -2857,7 +2857,7 @@
 			input[type="reset"].alt.icon:before,
 			input[type="button"].alt.icon:before,
 			.button.alt.icon:before {
-				color: #999;
+				color: #ffffff;
 			}
 
 		input[type="submit"].primary,
