Changes to be committed: 	modified:   assets/css/main.css 	modified:   index.html

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,7 +145,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #6E20A0;
+		color: #ffffff;
 		font-weight: 800;
 		line-height: 1em;
 		margin: 0 0 0.5em 0;
