Changes to be committed: 	modified:   assets/css/main.css 	modified:   index.html

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3923,3 +3923,12 @@
 
 	}
 
+/* SGBOX */
+	.SGBOX {
+		background-color: #ffe627;
+		width: 500px;
+		padding: 50px;
+		margin: 20px;
+		position: relative;
+	
+  		}
