--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3926,7 +3926,7 @@
 /* SGBOX */
 	.SGBOX {
 		background-color: #ffe627;
-		width: auto;
+		width: 400;
 		padding: 50px;
 		margin: 20px;
 		position: relative;
