--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3283,7 +3283,8 @@
 
 	#footer {
 		background: #7413dc;
-		padding: 3.5em 0 6em 0;
+		color: #ffffff;
+		padding: 3.0em 0 6em 0;
 		text-align: center;
 	}
 
