--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2018,7 +2018,7 @@
 	}
 
 	header p {
-		color: #6E20A0;
+		color: #ffffff;
 		position: relative;
 		margin: 0 0 1.5em 0;
 		font-style: italic;
@@ -2055,8 +2055,8 @@
 
 		header.major p {
 			display: inline-block;
-			border-top: solid 2px #6E20A0;
-			color: #6E20A0;
+			border-top: solid 2px #ffffff;
+			color: #ffffff;
 			margin: 1.0em 0 0 0;
 			padding: 1.0em 0 0 0;
 			font-style: normal;
@@ -3022,14 +3022,14 @@
 					}
 
 					#header nav > ul > li a:not(.button) {
-						color: #ffffff;
+						color: #000000;
 						display: inline-block;
 						text-decoration: none;
 						border: 0;
 					}
 
 						#header nav > ul > li a:not(.button).icon:before {
-							color: #ffffff;
+							color: #000000;
 							margin-right: 0.5em;
 						}
 
@@ -3038,7 +3038,7 @@
 					}
 
 					#header nav > ul > li.active a:not(.button) {
-						background-color: #ffffff;
+						background-color: #000000;
 					}
 
 					#header nav > ul > li .button {
@@ -3051,8 +3051,8 @@
 		#header input[type="button"],
 		#header .button {
 			background-color: transparent;
-			box-shadow: inset 0 0 0 2px #ffffff;
-			color: #999;
+			box-shadow: inset 0 0 0 2px #000000;
+			color: #000000;
 		}
 
 			#header input[type="submit"]:hover,
