--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2959,7 +2959,7 @@
   left: 24px;
 }
 	#header {
-		background: #7413dc;
+		background: #ffffff;
 		color: #ffffff;
 		cursor: default;
 		height: 4.5em;
