--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,7 +145,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
+		color: #000000;
 		font-weight: 800;
 		line-height: 1em;
 		margin: 0 0 0.5em 0;
@@ -209,7 +209,7 @@
 		}
 
 	blockquote {
-		border-left: solid 4px #e5e5e5;
+		border-left: solid 4px #000000;
 		font-style: italic;
 		margin: 0 0 2em 0;
 		padding: 0.5em 0 0.5em 2em;
@@ -2018,7 +2018,7 @@
 	}
 
 	header p {
-		color: #ffffff;
+		color: #000000;
 		position: relative;
 		margin: 0 0 1.5em 0;
 		font-style: italic;
@@ -2055,8 +2055,8 @@
 
 		header.major p {
 			display: inline-block;
-			border-top: solid 2px #ffffff;
-			color: #ffffff;
+			border-top: solid 2px #000000;
+			color: #000000;
 			margin: 1.0em 0 0 0;
 			padding: 1.0em 0 0 0;
 			font-style: normal;
