--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2949,9 +2949,9 @@
 	}
 .header img {
   float: left;
-  width: 110px;
+  width: auto;
   height: 80px;
-  background: #555;
+  left: 4.75em;
 }
 
 .header h1 {
@@ -2995,7 +2995,7 @@
 			height: inherit;
 			line-height: inherit;
 			position: absolute;
-			right: 2.75em;
+			right: 4.75em;
 			top: 0;
 			vertical-align: middle;
 		}
