--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2951,6 +2951,8 @@
   float: left;
   width: auto;
   height: 80px;
+  left: 4.75em;
+
 }
 
 .header h1 {
@@ -2963,7 +2965,7 @@
 		color: #ffffff;
 		cursor: default;
 		height: 4.5em;
-		left: 4.75em;
+		left: 0;
 		line-height: 4.5em;
 		position: fixed;
 		top: 0;
