--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2762,10 +2762,9 @@
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: #999;
 		border-radius: 6px;
 		border: 0;
-		color:  #999;
+		color:  #006ddf;
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 400;
@@ -2966,7 +2965,7 @@
 		height: 4.5em;
 		left: 0;
 		line-height: 4.5em;
-		position: fixed;
+		position: relative;
 		top: 0;
 		width: 100%;
 		z-index: 10000;
@@ -3040,7 +3039,7 @@
 					}
 
 					#header nav > ul > li.active a:not(.button) {
-						background-color: #999;
+						color: #006ddf;
 					}
 
 					#header nav > ul > li .button {
@@ -3054,14 +3053,14 @@
 		#header .button {
 			background-color: transparent;
 			box-shadow: inset 0 0 0 2px #000000;
-			color: #000000;
+			color: #006ddf;
 		}
 
 			#header input[type="submit"]:hover,
 			#header input[type="reset"]:hover,
 			#header input[type="button"]:hover,
 			#header .button:hover {
-				background-color: rgba(153, 153, 153, 0.25);
+				color: #006ddf;
 			}
 
 			#header input[type="submit"]:active,
